# Handwritten-Digit-Recognition

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
data/: trained_model.txt
src/: NNMatrix.cpp  NNMatrix.h  activations.cpp  activations.h  data_loader.cpp  data_loader.h  main.cpp  neural_network.cpp  neural_network.h
